add a images and add an header of the page

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <link rel="shortcut icon" href="images/logo.png" />
     <link rel="stylesheet" href="css/all.min.css" />
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/style.css" />
@@ -10,6 +11,13 @@
     <title>كشافة الإيمان الإسلامية - Iman scout</title>
   </head>
   <body>
+    <header class="header">
+      <div class="logoDiv">
+        <img class="logo1 m-2" src="images/logo.png" />
+        <img class="logo2" src="images/logo2.png" />
+      </div>
+    </header>
+
     <script src="js/all.min.js"></script>
     <script src="js/bootstrap.bundle.js"></script>
     <script src="js/main.js"></script>
