added the images and styling the header

--- a/index.html
+++ b/index.html
@@ -9,15 +9,19 @@
     <link rel="stylesheet" href="css/style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>كشافة الإيمان الإسلامية - Iman scout</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Cairo:wght@200;300;400;500;600;700;800;900;1000&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header class="header">
-      <div class="logoDiv">
-        <img class="logo1 m-2" src="images/logo.png" />
-        <img class="logo2" src="images/logo2.png" />
-      </div>
+      <img src="images/logo4.png" class="img4">
+      <img src="images/logo3.png" class="img3">
+      <img src="images/logo2.png" class="img2">
+      <img src="images/logo.png" class="img">
     </header>
-
     <script src="js/all.min.js"></script>
     <script src="js/bootstrap.bundle.js"></script>
     <script src="js/main.js"></script>
