finished of project

--- a/index.html
+++ b/index.html
@@ -17,13 +17,65 @@
   </head>
   <body>
     <header class="header">
-      <img src="images/logo4.png" class="img4">
-      <img src="images/logo3.png" class="img3">
-      <img src="images/logo2.png" class="img2">
-      <img src="images/logo.png" class="img">
+      <div>
+        <img src="images/logo4.png" class="img4" />
+        <img src="images/logo3.png" class="img3" />
+        <img src="images/logo2.png" class="img2" />
+        <img src="images/logo.png" class="img" />
+      </div>
     </header>
-    <script src="js/all.min.js"></script>
+    <section class="main">
+      <h3 class="title">تــعــلــن</h3>
+      <img src="images/logo5.png" class="img5" />
+      <h5>فـوج الـقـبـة بـالـتـعـاون مـع جـمـعـيـة راحـمـون</h5>
+      <h2>عـن أنــطلاق دورتــها الـصـيـفـيـة الـثـامـنـة</h2>
+      <h3 class="h3">للذكور من عمر 7 حتـى 16 سنة</h3>
+    </section>
+    <section class="info">
+      <div class="row">
+        <div class="col-6 info1">
+          <div>
+            <p class="locatoin2 text">مركز الم لتحفيظ القرآن</p>
+            <i class="fa-solid fa-location-dot location1 m-2"></i>
+          </div>
+          <div>
+            <p class="time2 text">من الإثنين حتى الخميس</p>
+            <i class="fa-solid fa-stopwatch time1 m-2"></i>
+          </div>
+        </div>
+        <div class="col-6 info2">
+          <div>
+            <p class="date text">تـبدأ الدورة 17 تموز 2023</p>
+            <i class="fa-regular fa-calendar-alt calendar m-2"></i>
+          </div>
+          <div>
+            <p class="money2 text">رسـم الإشترك : 15 دولار</p>
+            <i class="fa-solid fa-money-bills money1 m-2"></i>
+          </div>
+        </div>
+      </div>
+      <div class="divCollapse m-2">
+        <button data-bs-toggle="collapse" href="#collapseExample">
+          محتويات الدورة
+          <i class="dropdown-toggle"></i>
+        </button>
+        <div class="collapse m-2" id="collapseExample">
+          <ul class="list">
+            <li>مخيمات كشفية وبناء شخصية قيادية</li>
+            <li>إسلاميات ومناهج تربوية</li>
+            <li>مخيمات ورحلات خارجية</li>
+          </ul>
+        </div>
+      </div>
+    </section>
+    <section class="contact">
+      <p>للأستعلامـ</p>
+      <div>
+        <i class="fa-solid fa-phone phoneIcon"></i>
+        70 /549618
+        <i class="fa-brands fa-whatsapp whatsIcon"></i>
+      </div>
+    </section>
     <script src="js/bootstrap.bundle.js"></script>
-    <script src="js/main.js"></script>
   </body>
 </html>
